* fixed setEconomy-function